// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript/if/allman > if 1`] = `
"if (foo)
{
  bar();
}
"
`;

exports[`typescript/if/allman > if...else (1) 1`] = `
"if (foo)
{
  bar();
}
else
{
  baz();
}
"
`;

exports[`typescript/if/allman > if...else (2) - with comment 1`] = `
"// foo is truthy
if (foo)
{
  bar();
}
// foo is falsy
else
{
  baz();
}
"
`;

exports[`typescript/if/allman > if...elseif...else 1`] = `
"if (foo)
{
  bar();
}
else if (baz)
{
  qux();
}
else
{
  quux();
}
"
`;
